src/objects/LetterStreamJob__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piece_Count__c</fullName>
        <label>Piece Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LetterStreamJob</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Batch_Name__c</columns>
        <columns>Cost__c</columns>
        <columns>Details__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Piece_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
    <nameField>
        <displayFormat>LSJ-{0000}</displayFormat>
        <label>LetterStreamJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LetterStreamJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>